--- a/GameData/Sigma/Dimensions/Configs/Generic/caseSensitivityFix.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Generic/caseSensitivityFix.cfg
@@ -6,6 +6,13 @@
 		@finalizeOrbit ^= :R:r:
 		@finalizeOrbit ^= :U:u:
 		@finalizeOrbit ^= :E:e:
+		@Template
+		{
+			@removeAllPQSMods ^= :t:T:
+			@removeAllPQSMods ^= :R:r:
+			@removeAllPQSMods ^= :U:u:
+			@removeAllPQSMods ^= :E:e:
+		}
 		@Properties
 		{
 			@tidallyLocked ^= :t:T:
