--- a/GameData/Sigma/Dimensions/Configs/Generic/removePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Generic/removePQSMods.cfg
@@ -19,7 +19,9 @@
 	{
 		%removePQSMods = #,$Template/removePQSMods$,
 		@removePQSMods ^= : ::
-		@removePQSMods ^= :PQS_::
+		@removePQSMods ^= :PQS::
+		@removePQSMods ^= :Mod::
+		@removePQSMods ^= :_::
 	}
 	@Body:HAS[#removePQSMods[*,VertexSimplexHeightAbsolute,*]]
 	{
