--- a/GameData/Sigma/Dimensions/Configs/Generic/removePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Generic/removePQSMods.cfg
@@ -6,12 +6,12 @@
 		{
 			@Mods
 			{
-				!VertexSimplexHeightAbsolute:HAS[#SigmaDimensions[1]] {}
-				!VertexHeightNoiseVertHeightCurve2:HAS[#SigmaDimensions[1]] {}
-				!VertexRidgedAltitudeCurve:HAS[#SigmaDimensions[1]] {}
-				!LandControl:HAS[#SigmaDimensions[1]] {}
-				!AerialPerspectiveMaterial:HAS[#SigmaDimensions[1]] {}
-				!VertexHeightMap:HAS[#SigmaDimensions[1]] {}
+				!VertexSimplexHeightAbsolute:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+				!VertexHeightNoiseVertHeightCurve2:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+				!VertexRidgedAltitudeCurve:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+				!LandControl:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+				!AerialPerspectiveMaterial:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+				!VertexHeightMap:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 			}
 		}
 	}
@@ -29,7 +29,7 @@
 		{
 			@Mods
 			{
-				!VertexSimplexHeightAbsolute:HAS[#SigmaDimensions[1]] {}
+				!VertexSimplexHeightAbsolute:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 			}
 		}
 	}
@@ -39,7 +39,7 @@
 		{
 			@Mods
 			{
-				!VertexHeightNoiseVertHeightCurve2:HAS[#SigmaDimensions[1]] {}
+				!VertexHeightNoiseVertHeightCurve2:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 			}
 		}
 	}
@@ -49,7 +49,7 @@
 		{
 			@Mods
 			{
-				!VertexRidgedAltitudeCurve:HAS[#SigmaDimensions[1]] {}
+				!VertexRidgedAltitudeCurve:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 			}
 		}
 	}
@@ -59,7 +59,7 @@
 		{
 			@Mods
 			{
-				!LandControl:HAS[#SigmaDimensions[1]] {}
+				!LandControl:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 			}
 		}
 	}
@@ -69,7 +69,7 @@
 		{
 			@Mods
 			{
-				!AerialPerspectiveMaterial:HAS[#SigmaDimensions[1]] {}
+				!AerialPerspectiveMaterial:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 			}
 		}
 	}
@@ -79,7 +79,7 @@
 		{
 			@Mods
 			{
-				!VertexHeightMap:HAS[#SigmaDimensions[1]] {}
+				!VertexHeightMap:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 			}
 		}
 	}
