--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -8,32 +8,32 @@
 			{
 				@VertexSimplexHeightAbsolute
 				{
-					@deformity *= #$SigmaDimensions/Resize$
+					@deformity *= #$@SigmaDimensions/Resize$
 				}
 				@VertexHeightNoiseVertHeightCurve2
 				{
-					@deformity *= #$SigmaDimensions/Resize$
-					@simplexHeightEnd *= #$SigmaDimensions/Resize$
-					@simplexHeightStart *= #$SigmaDimensions/Resize$
+					@deformity *= #$@SigmaDimensions/Resize$
+					@simplexHeightEnd *= #$@SigmaDimensions/Resize$
+					@simplexHeightStart *= #$@SigmaDimensions/Resize$
 				}
 				@VertexRidgedAltitudeCurve
 				{
-					@deformity *= #$SigmaDimensions/Resize$
-					@simplexHeightEnd *= #$SigmaDimensions/Resize$
-					@simplexHeightStart *= #$SigmaDimensions/Resize$
+					@deformity *= #$@SigmaDimensions/Resize$
+					@simplexHeightEnd *= #$@SigmaDimensions/Resize$
+					@simplexHeightStart *= #$@SigmaDimensions/Resize$
 				}
 				@LandControl
 				{
-					@vHeightMax *= #$SigmaDimensions/Resize$
+					@vHeightMax *= #$@SigmaDimensions/Resize$
 				}
 				@AerialPerspectiveMaterial
 				{
-					@atmosphereDepth *= #$SigmaDimensions/Resize$
+					@atmosphereDepth *= #$@SigmaDimensions/Resize$
 				}
 				@VertexHeightMap
 				{
-					@offset *= #$SigmaDimensions/Resize$
-					@deformity *= #$SigmaDimensions/Resize$
+					@offset *= #$@SigmaDimensions/Resize$
+					@deformity *= #$@SigmaDimensions/Resize$
 				}
 			}
 		}
