--- a/GameData/Sigma/Dimensions/Configs/ReDimension/newCacheFiles.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/newCacheFiles.cfg
@@ -1,6 +1,6 @@
 @Kopernicus:AFTER[SigDim]
 {
-	%SigmaDimensionsResize = #$SigmaDimensions/Resize$
+	%SigmaDimensionsResize = #$@SigmaDimensions/Resize$
 }
 @Kopernicus:HAS[~SigmaDimensionsResize[1]]:AFTER[SigDim]
 {
