--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -4,29 +4,21 @@
 	{
 		@Properties
 		{
-			@rotationPeriod *= #$@SigmaDimentions/dayLengthMultiplier$
-			@inverseRotThresholdAltitude *= #$@SigmaDimentions/Resize$
-			@sphereOfInfluence = #$@SigmaDimentions/Rescale$
+			@radius *= #$@SigmaDimensions/Resize$
+			@mass *= #$@SigmaDimensions/Resize$
+			@mass *= #$@SigmaDimensions/Resize$
+			@rotationPeriod *= #$@SigmaDimensions/dayLengthMultiplier$
+			@inverseRotThresholdAltitude *= #$@SigmaDimensions/Resize$
+			@sphereOfInfluence *= #$@SigmaDimensions/Rescale$
 			@ScienceValues
 			{
-				@flyingAltitudeThreshold = #$@SigmaDimentions/Resize$
-				@spaceAltitudeThreshold = #$@SigmaDimentions/Rescale$
+				@flyingAltitudeThreshold *= #$@SigmaDimensions/Resize$
+				@spaceAltitudeThreshold *= #$@SigmaDimensions/Rescale$
 			}
 		}
 		@Orbit
 		{
-			@semiMajorAxis *= #$@SigmaDimentions/Rescale$
-		}
-		@ScaledVersion
-		{
-			@fadeStart = #$@SigmaDimentions/Resize$
-			@fadeEnd = #$@SigmaDimentions/Resize$
-		}
-		@PQS
-		{
-			@fadeStart = #$@SigmaDimentions/Resize$
-			@fadeEnd = #$@SigmaDimentions/Resize$
-			@deactivateAltitude = #$@SigmaDimentions/Resize$
+			@semiMajorAxis *= #$@SigmaDimensions/Rescale$
 		}
 	}
 }
