--- a/GameData/Sigma/Dimensions/Configs/ReDimension/timewarpAltitudeLimits.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/timewarpAltitudeLimits.cfg
@@ -3,35 +3,35 @@
 	@Body:HAS[#timewarpAltitudeLimits[*,*,*,*,*,*,*,*]]
 	{
 		%tempLimit = #$timewarpAltitudeLimits[0]$
-		@tempLimit *= #$@SigmaDimentions/Resize$
+		@tempLimit *= #$@SigmaDimensions/Resize$
 		%newLimits = #$tempLimit$,
 
 		%tempLimit = #$timewarpAltitudeLimits[1]$
-		@tempLimit *= #$@SigmaDimentions/Resize$
+		@tempLimit *= #$@SigmaDimensions/Resize$
 		@newLimits = #$newLimits$$tempLimit$,
 
 		%tempLimit = #$timewarpAltitudeLimits[2]$
-		@tempLimit *= #$@SigmaDimentions/Resize$
+		@tempLimit *= #$@SigmaDimensions/Resize$
 		@newLimits = #$newLimits$$tempLimit$,
 
 		%tempLimit = #$timewarpAltitudeLimits[3]$
-		@tempLimit *= #$@SigmaDimentions/Resize$
+		@tempLimit *= #$@SigmaDimensions/Resize$
 		@newLimits = #$newLimits$$tempLimit$,
 
 		%tempLimit = #$timewarpAltitudeLimits[4]$
-		@tempLimit *= #$@SigmaDimentions/Resize$
+		@tempLimit *= #$@SigmaDimensions/Resize$
 		@newLimits = #$newLimits$$tempLimit$,
 
 		%tempLimit = #$timewarpAltitudeLimits[5]$
-		@tempLimit *= #$@SigmaDimentions/Resize$
+		@tempLimit *= #$@SigmaDimensions/Resize$
 		@newLimits = #$newLimits$$tempLimit$,
 
 		%tempLimit = #$timewarpAltitudeLimits[6]$
-		@tempLimit *= #$@SigmaDimentions/Resize$
+		@tempLimit *= #$@SigmaDimensions/Resize$
 		@newLimits = #$newLimits$$tempLimit$,
 
 		%tempLimit = #$timewarpAltitudeLimits[7]$
-		@tempLimit *= #$@SigmaDimentions/Resize$
+		@tempLimit *= #$@SigmaDimensions/Resize$
 		@newLimits = #$newLimits$$tempLimit$
 	}
 }
