--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -20,5 +20,22 @@
 		{
 			@semiMajorAxis *= #$@SigmaDimensions/Rescale$
 		}
+		@SpaceCenter
+		{
+			%Resize = #$@SigmaDimensions/Resize$
+			@heightMapDeformity *= #$Resize$
+			@repositionRadiusOffset += 22.3
+			@repositionRadiusOffset *= #$Resize$
+			@repositionRadiusOffset -= 22.3
+			@absoluteOffset *= #$Resize$
+		}
+		@SpaceCenter:HAS[#Resize[<0.75]]
+		{
+			@Resize = 0.75
+		}
+		@SpaceCenter
+		{
+			@radius *= #$Resize$
+		}
 	}
 }
