--- a/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
@@ -64,4 +64,33 @@
 			}
 		}
 	}
+	@Body[Kerbin]
+	{
+		%SpaceCenter
+		{
+			repositionRadiusOffset = 42.7
+			%repositionRadiusOffsetTEMP = #$repositionRadiusOffset$
+			!repositionRadiusOffset,* = DEL
+			repositionRadiusOffset = #$repositionRadiusOffsetTEMP$
+			!repositionRadiusOffsetTEMP = DEL
+			
+			heightMapDeformity = 70
+			%heightMapDeformityTEMP = #$heightMapDeformity$
+			!heightMapDeformity,* = DEL
+			heightMapDeformity = #$heightMapDeformityTEMP$
+			!heightMapDeformityTEMP = DEL
+			
+			absoluteOffset = 0
+			%absoluteOffsetTEMP = #$absoluteOffset$
+			!absoluteOffset,* = DEL
+			absoluteOffset = #$absoluteOffsetTEMP$
+			!absoluteOffsetTEMP = DEL
+			
+			radius = 7500
+			%radiusTEMP = #$radius$
+			!radius,* = DEL
+			radius = #$radiusTEMP$
+			!radiusTEMP = DEL
+		}
+	}
 }
