--- a/GameData/Sigma/Dimensions/Configs/General/massFix.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/massFix.cfg
@@ -19,12 +19,13 @@
 
 	// mass from gravParameter
 
-	@Body:HAS[@Properties:HAS[#gravParameter[*],~mass[]]]
+	@Body:HAS[@Properties:HAS[#gravParameter[*]]]
 	{
 		@Properties
 		{
 			mass = #$gravParameter$
 			@mass /= 6.674e-11
+			!gravParameter = DEL
 		}
 	}
 
