--- a/GameData/Sigma/Dimensions/Configs/ReDimension/timewarpAltitudeLimits.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/timewarpAltitudeLimits.cfg
@@ -1,37 +1,43 @@
 @Kopernicus:AFTER[SigDim]
 {
-	@Body:HAS[#timewarpAltitudeLimits[*,*,*,*,*,*,*,*]]
+	@Body:HAS[#timewarpAltitudeLimits[*]]
 	{
-		%tempLimit = #$timewarpAltitudeLimits[0]$
+		%tempLimit = #$timewarpAltitudeLimits[0, ]$
 		@tempLimit *= #$@SigmaDimensions/Resize$
 		%newLimits = #$tempLimit$,
 
-		%tempLimit = #$timewarpAltitudeLimits[1]$
+		%tempLimit = #$timewarpAltitudeLimits[1, ]$
 		@tempLimit *= #$@SigmaDimensions/Resize$
 		@newLimits = #$newLimits$$tempLimit$,
 
-		%tempLimit = #$timewarpAltitudeLimits[2]$
+		%tempLimit = #$timewarpAltitudeLimits[2, ]$
 		@tempLimit *= #$@SigmaDimensions/Resize$
 		@newLimits = #$newLimits$$tempLimit$,
 
-		%tempLimit = #$timewarpAltitudeLimits[3]$
+		%tempLimit = #$timewarpAltitudeLimits[3, ]$
 		@tempLimit *= #$@SigmaDimensions/Resize$
 		@newLimits = #$newLimits$$tempLimit$,
 
-		%tempLimit = #$timewarpAltitudeLimits[4]$
+		%tempLimit = #$timewarpAltitudeLimits[4, ]$
 		@tempLimit *= #$@SigmaDimensions/Resize$
 		@newLimits = #$newLimits$$tempLimit$,
 
-		%tempLimit = #$timewarpAltitudeLimits[5]$
+		%tempLimit = #$timewarpAltitudeLimits[5, ]$
 		@tempLimit *= #$@SigmaDimensions/Resize$
 		@newLimits = #$newLimits$$tempLimit$,
 
-		%tempLimit = #$timewarpAltitudeLimits[6]$
+		%tempLimit = #$timewarpAltitudeLimits[6, ]$
 		@tempLimit *= #$@SigmaDimensions/Resize$
 		@newLimits = #$newLimits$$tempLimit$,
 
-		%tempLimit = #$timewarpAltitudeLimits[7]$
+		%tempLimit = #$timewarpAltitudeLimits[7, ]$
 		@tempLimit *= #$@SigmaDimensions/Resize$
 		@newLimits = #$newLimits$$tempLimit$
+
+		@timewarpAltitudeLimits = #$newLimits$
+		@timewarpAltitudeLimits ^= :,: :
+
+		!tempLimit = DEL
+		!newLimits = DEL
 	}
 }
