--- a/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
@@ -6,7 +6,7 @@
 		{
 			rotationPeriod = 21549.4251830898
 			inverseRotThresholdAltitude = 100000
-			timewarpAltitudeLimits = 0,30000,30000,60000,120000,240000,480000,600000
+			timewarpAltitudeLimits = 0 30000 30000 60000 120000 240000 480000 600000
 			sphereOfInfluence = 84159286.4796305
 			%ScienceValues
 			{
