--- a/GameData/Sigma/Dimensions/Configs/Bodies/Minmus.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Minmus.cfg
@@ -6,7 +6,7 @@
 		{
 			rotationPeriod = 40400
 			inverseRotThresholdAltitude = 100000
-			timewarpAltitudeLimits = 0,3000,3000,6000,12000,24000,48000,60000
+			timewarpAltitudeLimits = 0 3000 3000 6000 12000 24000 48000 60000
 			sphereOfInfluence = 2247428.3879023
 			%ScienceValues
 			{
