--- a/GameData/Sigma/Dimensions/Configs/Bodies/Mun.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Mun.cfg
@@ -6,7 +6,7 @@
 		{
 			rotationPeriod = 138984.376574476
 			inverseRotThresholdAltitude = 100000
-			timewarpAltitudeLimits = 0,5000,5000,10000,25000,50000,100000,200000
+			timewarpAltitudeLimits = 0 5000 5000 10000 25000 50000 100000 200000
 			sphereOfInfluence = 2429559.11656475
 			%ScienceValues
 			{
