--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -35,6 +35,23 @@
 					@offset *= #$@SigmaDimensions/Resize$
 					@deformity *= #$@SigmaDimensions/Resize$
 				}
+				@AltitudeAlpha
+				{
+					@atmosphereDepth *= #$@SigmaDimensions/Resize$
+				}
+				@VertexSimplexHeight
+				{
+					@deformity *= #$@SigmaDimensions/Resize$
+				}
+				@VertexHeightNoiseVertHeight
+				{
+					@deformity *= #$@SigmaDimensions/Resize$
+				}
+				@VertexPlanet
+				{
+					@colorDeformity *= #$@SigmaDimensions/Resize$
+					@deformity *= #$@SigmaDimensions/Resize$
+				}
 			}
 		}
 	}
