--- a/GameData/Sigma/Dimensions/IN_DEVELOPMENT.cfg
+++ b/GameData/Sigma/Dimensions/IN_DEVELOPMENT.cfg
@@ -4,9 +4,11 @@
 	{
 		#../Body[Sun] {}
 		#../Body[Kerbin] {}
+		#../Body[Mun] {}
 	}
 	!Body,* {}
 	#BACKUP/Body[Kerbin] {}
+	#BACKUP/Body[Mun] {}
 }
 @Kopernicus:FINAL
 {
