--- a/GameData/Sigma/Dimensions/IN_DEVELOPMENT.cfg
+++ b/GameData/Sigma/Dimensions/IN_DEVELOPMENT.cfg
@@ -5,10 +5,12 @@
 		#../Body[Sun] {}
 		#../Body[Kerbin] {}
 		#../Body[Mun] {}
+		#../Body[Minmus] {}
 	}
 	!Body,* {}
 	#BACKUP/Body[Kerbin] {}
 	#BACKUP/Body[Mun] {}
+	#BACKUP/Body[Minmus] {}
 }
 @Kopernicus:FINAL
 {
