--- a/GameData/Sigma/Dimensions/IN_DEVELOPMENT.cfg
+++ b/GameData/Sigma/Dimensions/IN_DEVELOPMENT.cfg
@@ -6,14 +6,15 @@
 		#../Body[Kerbin] {}
 		#../Body[Mun] {}
 		#../Body[Minmus] {}
+		#../Body[Duna] {}
+		#../Body[Ike] {}
 	}
 	!Body,* {}
+	#BACKUP/Body[Sun] {}
 	#BACKUP/Body[Kerbin] {}
 	#BACKUP/Body[Mun] {}
 	#BACKUP/Body[Minmus] {}
-}
-@Kopernicus:FINAL
-{
-	#BACKUP/Body[Sun] {}
+	#BACKUP/Body[Duna] {}
+	#BACKUP/Body[Ike] {}
 	!BACKUP {}
 }
