--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -52,6 +52,10 @@
 					@colorDeformity *= #$@SigmaDimensions/Resize$
 					@deformity *= #$@SigmaDimensions/Resize$
 				}
+				@VertexHeightNoise
+				{
+					@deformity *= #$@SigmaDimensions/Resize$
+				}
 			}
 		}
 	}
