--- a/GameData/Sigma/Dimensions/Configs/Bodies/Duna.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Duna.cfg
@@ -25,15 +25,18 @@
 				{
 					deformity = 500
 				}
-				%VertexHeightNoiseVertHeightCurve2,2
+				VertexHeightNoiseVertHeightCurve2 {}
+				VertexHeightNoiseVertHeightCurve2 {}
+				VertexHeightNoiseVertHeightCurve2 {}
+				@VertexHeightNoiseVertHeightCurve2,2
 				{
 					%PQScounter = 3
 				}
-				%VertexHeightNoiseVertHeightCurve2,1
+				@VertexHeightNoiseVertHeightCurve2,1
 				{
 					%PQScounter = 2
 				}
-				%VertexHeightNoiseVertHeightCurve2
+				@VertexHeightNoiseVertHeightCurve2
 				{
 					%PQScounter = 1
 				}
@@ -41,16 +44,19 @@
 				{
 					deformity = 1000
 					simplexHeightEnd = 6500
+					!PQScounter = DEL
 				}
 				@VertexHeightNoiseVertHeightCurve2:HAS[#PQScounter[2]]
 				{
 					deformity = 1000
 					simplexHeightEnd = 7500
+					!PQScounter = DEL
 				}
 				@VertexHeightNoiseVertHeightCurve2:HAS[#PQScounter[3]]
 				{
 					deformity = 2000
 					simplexHeightEnd = 8500
+					!PQScounter = DEL
 				}
 				%AltitudeAlpha
 				{
