--- a/GameData/Sigma/Dimensions/Configs/Bodies/Ike.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Ike.cfg
@@ -6,7 +6,7 @@
 		{
 			rotationPeriod = 65517.8621348081
 			inverseRotThresholdAltitude = 100000
-			timewarpAltitudeLimits = 0,5000,5000,10000,25000,50000,100000,200000
+			timewarpAltitudeLimits = 0 5000 5000 10000 25000 50000 100000 200000
 			%ScienceValues
 			{
 				flyingAltitudeThreshold = 18000
