--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -6,53 +6,53 @@
 		{
 			@Mods
 			{
-				@VertexSimplexHeightAbsolute
+				@VertexSimplexHeightAbsolute,*
 				{
 					@deformity *= #$@SigmaDimensions/Resize$
 				}
-				@VertexHeightNoiseVertHeightCurve2
-				{
-					@deformity *= #$@SigmaDimensions/Resize$
-					@simplexHeightEnd *= #$@SigmaDimensions/Resize$
-					@simplexHeightStart *= #$@SigmaDimensions/Resize$
-				}
-				@VertexRidgedAltitudeCurve
+				@VertexHeightNoiseVertHeightCurve2,*
 				{
 					@deformity *= #$@SigmaDimensions/Resize$
 					@simplexHeightEnd *= #$@SigmaDimensions/Resize$
 					@simplexHeightStart *= #$@SigmaDimensions/Resize$
 				}
-				@LandControl
+				@VertexRidgedAltitudeCurve,*
+				{
+					@deformity *= #$@SigmaDimensions/Resize$
+					@simplexHeightEnd *= #$@SigmaDimensions/Resize$
+					@simplexHeightStart *= #$@SigmaDimensions/Resize$
+				}
+				@LandControl,*
 				{
 					@vHeightMax *= #$@SigmaDimensions/Resize$
 				}
-				@AerialPerspectiveMaterial
+				@AerialPerspectiveMaterial,*
 				{
 					@atmosphereDepth *= #$@SigmaDimensions/Resize$
 				}
-				@VertexHeightMap
+				@VertexHeightMap,*
 				{
 					@offset *= #$@SigmaDimensions/Resize$
 					@deformity *= #$@SigmaDimensions/Resize$
 				}
-				@AltitudeAlpha
+				@AltitudeAlpha,*
 				{
 					@atmosphereDepth *= #$@SigmaDimensions/Resize$
 				}
-				@VertexSimplexHeight
+				@VertexSimplexHeight,*
 				{
 					@deformity *= #$@SigmaDimensions/Resize$
 				}
-				@VertexHeightNoiseVertHeight
+				@VertexHeightNoiseVertHeight,*
 				{
 					@deformity *= #$@SigmaDimensions/Resize$
 				}
-				@VertexPlanet
+				@VertexPlanet,*
 				{
 					@colorDeformity *= #$@SigmaDimensions/Resize$
 					@deformity *= #$@SigmaDimensions/Resize$
 				}
-				@VertexHeightNoise
+				@VertexHeightNoise,*
 				{
 					@deformity *= #$@SigmaDimensions/Resize$
 				}
