eve gilly development

--- a/GameData/Sigma/Dimensions/IN_DEVELOPMENT.cfg
+++ b/GameData/Sigma/Dimensions/IN_DEVELOPMENT.cfg
@@ -8,6 +8,8 @@
 		#../Body[Minmus] {}
 		#../Body[Duna] {}
 		#../Body[Ike] {}
+		#../Body[Eve] {}
+		#../Body[Gilly] {}
 	}
 	!Body,* {}
 	#BACKUP/Body[Sun] {}
@@ -16,5 +18,7 @@
 	#BACKUP/Body[Minmus] {}
 	#BACKUP/Body[Duna] {}
 	#BACKUP/Body[Ike] {}
+	#BACKUP/Body[Eve] {}
+	#BACKUP/Body[Gilly] {}
 	!BACKUP {}
 }
