moho + dres + some fixes

--- a/GameData/Sigma/Dimensions/Configs/Bodies/Dres.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Dres.cfg
@@ -1,45 +1,45 @@
 @Kopernicus:FOR[SigDim]
 {
-	@Body:HAS[@Template:HAS[#name[Ike]]]
+	@Body:HAS[@Template:HAS[#name[Dres]]]
 	{
 		%Properties
 		{
-			rotationPeriod = 65517.8621348081
+			rotationPeriod = 34800
 			inverseRotThresholdAltitude = 100000
-			timewarpAltitudeLimits = 0 5000 5000 10000 25000 50000 100000 200000
+			timewarpAltitudeLimits = 0 10000 10000 30000 50000 100000 200000 300000
 			%ScienceValues
 			{
 				flyingAltitudeThreshold = 18000
-				spaceAltitudeThreshold = 50000
+				spaceAltitudeThreshold = 25000
 			}
 		}
 		%PQS
 		{
 			%Mods
 			{
-				%VertexSimplexHeightAbsolute
+				%AerialPerspectiveMaterial
 				{
-					deformity = 12000
+					atmosphereDepth = 150000
 					SigmaDimensions = 1
 				}
-				%VertexHeightNoise
+				%VertexHeightMap
 				{
-					deformity = 1600
+					deformity = 4000
 					SigmaDimensions = 1
 				}
 				%VertexSimplexHeight
 				{
-					deformity = 100
+					deformity = 1700
 					SigmaDimensions = 1
 				}
-				%AltitudeAlpha
+				%VertexHeightNoise
 				{
-					atmosphereDepth = 8000
+					deformity = 1000
 					SigmaDimensions = 1
 				}
-				%LandControl
+				%VertexSimplexHeightAbsolute
 				{
-					vHeightMax = 10000
+					deformity = 400
 					SigmaDimensions = 1
 				}
 			}
