--- a/GameData/Sigma/Dimensions/Configs/Bodies/Eve.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Eve.cfg
@@ -21,34 +21,41 @@
 				{
 					offset = -1500
 					deformity = 5000
+					SigmaDimensions = 1
 				}
 				%VertexSimplexHeight
 				{
 					deformity = 500
+					SigmaDimensions = 1
 				}
 				%VertexHeightNoiseVertHeightCurve2
 				{
 					deformity = 5000
 					simplexHeightEnd = 5000
 					simplexHeightStart = 250
+					SigmaDimensions = 1
 				}
 				%LandControl
 				{
 					vHeightMax = 3500
+					SigmaDimensions = 1
 				}
 				%AltitudeAlpha
 				{
 					atmosphereDepth = 10000
+					SigmaDimensions = 1
 				}
 				AerialPerspectiveMaterial {}
 				AerialPerspectiveMaterial {}
 				@AerialPerspectiveMaterial,0
 				{
 					atmosphereDepth = 150000
+					SigmaDimensions = 1
 				}
 				@AerialPerspectiveMaterial,1
 				{
 					atmosphereDepth = 5000
+					SigmaDimensions = 1
 				}
 			}
 		}
