--- a/GameData/Sigma/Dimensions/Configs/Bodies/Gilly.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Gilly.cfg
@@ -20,18 +20,22 @@
 				%VertexSimplexHeightAbsolute
 				{
 					deformity = 8000
+					SigmaDimensions = 1
 				}
 				%VertexHeightNoise
 				{
 					deformity = 150
+					SigmaDimensions = 1
 				}
 				%AltitudeAlpha
 				{
 					atmosphereDepth = 8000
+					SigmaDimensions = 1
 				}
 				%LandControl
 				{
 					vHeightMax = 10000
+					SigmaDimensions = 1
 				}
 			}
 		}
