--- a/GameData/Sigma/Dimensions/Configs/Bodies/Minmus.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Minmus.cfg
@@ -20,15 +20,18 @@
 				%AltitudeAlpha
 				{
 					atmosphereDepth = 8000
+					SigmaDimensions = 1
 				}
 				%VertexPlanet
 				{
 					colorDeformity = 6000
 					deformity = 5000
+					SigmaDimensions = 1
 				}
 				%LandControl
 				{
 					vHeightMax = 10000
+					SigmaDimensions = 1
 				}
 			}
 		}
