--- a/GameData/Sigma/Dimensions/Configs/Bodies/Mun.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Mun.cfg
@@ -20,22 +20,27 @@
 				%VertexHeightMap
 				{
 					deformity = 7500
+					SigmaDimensions = 1
 				}
 				%AltitudeAlpha
 				{
 					atmosphereDepth = 8000
+					SigmaDimensions = 1
 				}
 				%LandControl
 				{
 					vHeightMax = 10000
+					SigmaDimensions = 1
 				}
 				%VertexSimplexHeight
 				{
 					deformity = 400
+					SigmaDimensions = 1
 				}
 				%VertexHeightNoiseVertHeight
 				{
 					deformity = 400
+					SigmaDimensions = 1
 				}
 			}
 		}
