--- a/GameData/Sigma/Dimensions/Configs/Bodies/Duna.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Duna.cfg
@@ -20,10 +20,12 @@
 				%VertexHeightMap
 				{
 					deformity = 6000
+					SigmaDimensions = 1
 				}
 				%VertexSimplexHeightAbsolute
 				{
 					deformity = 500
+					SigmaDimensions = 1
 				}
 				VertexHeightNoiseVertHeightCurve2 {}
 				VertexHeightNoiseVertHeightCurve2 {}
@@ -32,31 +34,34 @@
 				{
 					deformity = 1000
 					simplexHeightEnd = 6500
-					!PQScounter = DEL
+					SigmaDimensions = 1
 				}
 				@VertexHeightNoiseVertHeightCurve2,1
 				{
 					deformity = 1000
 					simplexHeightEnd = 7500
-					!PQScounter = DEL
+					SigmaDimensions = 1
 				}
 				@VertexHeightNoiseVertHeightCurve2,2
 				{
 					deformity = 2000
 					simplexHeightEnd = 8500
-					!PQScounter = DEL
+					SigmaDimensions = 1
 				}
 				%AltitudeAlpha
 				{
 					atmosphereDepth = 11500
+					SigmaDimensions = 1
 				}
 				%LandControl
 				{
 					vHeightMax = 3500
+					SigmaDimensions = 1
 				}
 				%AerialPerspectiveMaterial
 				{
 					atmosphereDepth = 150000
+					SigmaDimensions = 1
 				}
 			}
 		}
