--- a/GameData/Sigma/Dimensions/Configs/Bodies/Moho.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Moho.cfg
@@ -7,7 +7,7 @@
 			rotationPeriod = 1210000
 			inverseRotThresholdAltitude = 100000
 			timewarpAltitudeLimits = 0 10000 10000 30000 50000 100000 200000 300000
-			ScienceValues
+			%ScienceValues
 			{
 				flyingAltitudeThreshold = 18000
 				spaceAltitudeThreshold = 80000
