--- a/GameData/Sigma/Dimensions/Configs/Bodies/Laythe.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Laythe.cfg
@@ -7,45 +7,45 @@
 			rotationPeriod = 52980.8790593796
 			inverseRotThresholdAltitude = 100000
 			timewarpAltitudeLimits = 0 30000 30000 60000 120000 240000 480000 600000
-			ScienceValues
+			%ScienceValues
 			{
 				flyingAltitudeThreshold = 10000
 				spaceAltitudeThreshold = 200000
 			}
 		}
-		PQS
+		%PQS
 		{
-			Mods
+			%Mods
 			{
-				LandControl
+				%LandControl
 				{
 					vHeightMax = 6000
 				}
-				AerialPerspectiveMaterial
+				%AerialPerspectiveMaterial
 				{
 					atmosphereDepth = 150000
 				}
-				VertexHeightNoise
+				%VertexHeightNoise
 				{
 					deformity = 800
 				}
-				VertexSimplexHeightMap
+				%VertexSimplexHeightMap
 				{
 					deformity = 900
 					//heightEnd = 1
 					//heightStart = 0.6
 				}
-				AerialPerspectiveMaterial
+				%AerialPerspectiveMaterial
 				{
 					atmosphereDepth = 5000
 				}
-				VertexHeightNoiseVertHeight
+				%VertexHeightNoiseVertHeight
 				{
 					//heightStart = 0.2
 					//heightEnd = 1
 					deformity = 200
 				}
-				VertexHeightMap
+				%VertexHeightMap
 				{
 					offset = -2000
 					deformity = 8000
