--- a/GameData/Sigma/Dimensions/Configs/Bodies/Bop.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Bop.cfg
@@ -17,7 +17,15 @@
 		{
 			%Mods
 			{
-				%FlattenArea
+				FlattenArea {}
+				FlattenArea {}
+				@FlattenArea,0
+				{
+					flattenTo = 2200
+					innerRadius = 4000
+					outerRadius = 15000
+				}
+				@FlattenArea,1
 				{
 					flattenTo = 900
 					innerRadius = 15000
@@ -30,12 +38,6 @@
 				%VertexHeightNoise
 				{
 					deformity = 600
-				}
-				%FlattenArea
-				{
-					flattenTo = 2200
-					innerRadius = 4000
-					outerRadius = 15000
 				}
 				%AltitudeAlpha
 				{
