--- a/GameData/Sigma/Dimensions/Configs/Bodies/Vall.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Vall.cfg
@@ -17,23 +17,27 @@
 		{
 			%Mods
 			{
-				%VertexSimplexHeightAbsolute
+				VertexSimplexHeightAbsolute {}
+				VertexSimplexHeightAbsolute {}
+				@VertexSimplexHeightAbsolute,0
 				{
 					deformity = 3000
+				}
+				@VertexSimplexHeightAbsolute,1
+				{
+					deformity = 100
 				}
 				%VertexHeightNoise
 				{
 					deformity = 2000
 				}
-				%VertexHeightMap
+				VertexHeightMap {}
+				VertexHeightMap {}
+				@VertexHeightMap,0
 				{
 					deformity = 1000
 				}
-				%VertexSimplexHeightAbsolute
-				{
-					deformity = 100
-				}
-				%VertexHeightMap
+				@VertexHeightMap,1
 				{
 					deformity = 2000
 				}
