--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -56,6 +56,16 @@
 				{
 					@deformity *= #$@SigmaDimensions/Resize$
 				}
+				@FlattenArea,*
+				{
+					@flattenTo *= #$@SigmaDimensions/Resize$
+					@innerRadius *= #$@SigmaDimensions/Resize$
+					@outerRadius *= #$@SigmaDimensions/Resize$
+				}				
+				@VertexSimplexHeightMap,*
+				{
+					@deformity *= #$@SigmaDimensions/Resize$
+				}
 			}
 		}
 	}
