--- a/GameData/Sigma/Dimensions/Configs/Bodies/allowUserDefined.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/allowUserDefined.cfg
@@ -30,6 +30,34 @@
 				{
 					%userDefined = 1
 				}
+				@VertexSimplexHeightMap,*
+				{
+					%userDefined = 1
+				}
+				@VertexPlanet,*
+				{
+					%userDefined = 1
+				}
+				@FlattenArea,*
+				{
+					%userDefined = 1
+				}
+				@VertexHeightNoise,*
+				{
+					%userDefined = 1
+				}
+				@AltitudeAlpha,*
+				{
+					%userDefined = 1
+				}
+				@VertexSimplexHeight,*
+				{
+					%userDefined = 1
+				}
+				@VertexHeightNoiseVertHeight,*
+				{
+					%userDefined = 1
+				}
 			}
 		}
 	}
