--- a/GameData/Sigma/Dimensions/Configs/General/removePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/removePQSMods.cfg
@@ -12,6 +12,13 @@
 				!LandControl:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 				!AerialPerspectiveMaterial:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 				!VertexHeightMap:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+				!VertexSimplexHeightMap:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+				!VertexPlanet:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+				!FlattenArea:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+				!VertexHeightNoise:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+				!AltitudeAlpha:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+				!VertexSimplexHeight:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+				!VertexHeightNoiseVertHeight:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 			}
 		}
 	}
@@ -80,6 +87,76 @@
 			@Mods
 			{
 				!VertexHeightMap:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+			}
+		}
+	}
+	@Body:HAS[#removePQSMods[*,VertexSimplexHeightMap,*]]
+	{
+		@PQS
+		{
+			@Mods
+			{
+				!VertexSimplexHeightMap:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+			}
+		}
+	}
+	@Body:HAS[#removePQSMods[*,VertexPlanet,*]]
+	{
+		@PQS
+		{
+			@Mods
+			{
+				!VertexPlanet:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+			}
+		}
+	}
+	@Body:HAS[#removePQSMods[*,FlattenArea,*]]
+	{
+		@PQS
+		{
+			@Mods
+			{
+				!FlattenArea:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+			}
+		}
+	}
+	@Body:HAS[#removePQSMods[*,VertexHeightNoise,*]]
+	{
+		@PQS
+		{
+			@Mods
+			{
+				!VertexHeightNoise:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+			}
+		}
+	}
+	@Body:HAS[#removePQSMods[*,AltitudeAlpha,*]]
+	{
+		@PQS
+		{
+			@Mods
+			{
+				!AltitudeAlpha:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+			}
+		}
+	}
+	@Body:HAS[#removePQSMods[*,VertexSimplexHeight,*]]
+	{
+		@PQS
+		{
+			@Mods
+			{
+				!VertexSimplexHeight:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+			}
+		}
+	}
+	@Body:HAS[#removePQSMods[*,VertexHeightNoiseVertHeight,*]]
+	{
+		@PQS
+		{
+			@Mods
+			{
+				!VertexHeightNoiseVertHeight:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 			}
 		}
 	}
