--- a/GameData/Sigma/Dimensions/Configs/Bodies/Bop.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Bop.cfg
@@ -24,28 +24,34 @@
 					flattenTo = 2200
 					innerRadius = 4000
 					outerRadius = 15000
+					SigmaDimensions = 1
 				}
 				@FlattenArea,1
 				{
 					flattenTo = 900
 					innerRadius = 15000
 					outerRadius = 35000
+					SigmaDimensions = 1
 				}
 				%VertexSimplexHeightAbsolute
 				{
 					deformity = 24000
+					SigmaDimensions = 1
 				}
 				%VertexHeightNoise
 				{
 					deformity = 600
+					SigmaDimensions = 1
 				}
 				%AltitudeAlpha
 				{
 					atmosphereDepth = 8000
+					SigmaDimensions = 1
 				}
 				%LandControl
 				{
 					vHeightMax = 10000
+					SigmaDimensions = 1
 				}
 			}
 		}
