--- a/GameData/Sigma/Dimensions/Configs/Bodies/Eeloo.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Eeloo.cfg
@@ -20,29 +20,33 @@
 				%LandControl
 				{
 					vHeightMax = 3500
+					SigmaDimensions = 1
 				}
 				%AerialPerspectiveMaterial
 				{
 					atmosphereDepth = 150000
+					SigmaDimensions = 1
 				}
 				%VertexHeightMap
 				{
 					offset = -300
 					deformity = 4100
+					SigmaDimensions = 1
 				}
 				%VertexSimplexHeight
 				{
 					deformity = 600
+					SigmaDimensions = 1
 				}
 				%VertexHeightNoise
 				{
 					deformity = 400
+					SigmaDimensions = 1
 				}
 				%VertexHeightNoiseVertHeight
 				{
-					//heightStart = 0.2
-					//heightEnd = 1
 					deformity = 140
+					SigmaDimensions = 1
 				}
 			}
 		}
