--- a/GameData/Sigma/Dimensions/Configs/Bodies/Laythe.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Laythe.cfg
@@ -20,35 +20,38 @@
 				%LandControl
 				{
 					vHeightMax = 6000
+					SigmaDimensions = 1
 				}
 				%AerialPerspectiveMaterial
 				{
 					atmosphereDepth = 150000
+					SigmaDimensions = 1
 				}
 				%VertexHeightNoise
 				{
 					deformity = 800
+					SigmaDimensions = 1
 				}
 				%VertexSimplexHeightMap
 				{
 					deformity = 900
-					//heightEnd = 1
-					//heightStart = 0.6
+					SigmaDimensions = 1
 				}
 				%AerialPerspectiveMaterial
 				{
 					atmosphereDepth = 5000
+					SigmaDimensions = 1
 				}
 				%VertexHeightNoiseVertHeight
 				{
-					//heightStart = 0.2
-					//heightEnd = 1
 					deformity = 200
+					SigmaDimensions = 1
 				}
 				%VertexHeightMap
 				{
 					offset = -2000
 					deformity = 8000
+					SigmaDimensions = 1
 				}
 			}
 		}
