--- a/GameData/Sigma/Dimensions/Configs/Bodies/Tylo.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Tylo.cfg
@@ -6,7 +6,7 @@
 		{
 			rotationPeriod = 211926.35802123
 			inverseRotThresholdAltitude = 100000
-			timewarpAltitudeLimits = 0,30000,30000,60000,120000,240000,480000,600000
+			timewarpAltitudeLimits = 0 30000 30000 60000 120000 240000 480000 600000
 			%ScienceValues
 			{
 				flyingAltitudeThreshold = 18000
@@ -20,28 +20,34 @@
 				%VertexSimplexHeightAbsolute
 				{
 					deformity = 1000
+					SigmaDimensions = 1
 				}
 				%VertexSimplexHeight
 				{
 					deformity = 2000
+					SigmaDimensions = 1
 				}
 				%VertexHeightMap
 				{
 					offset = 0
 					deformity = 6000
+					SigmaDimensions = 1
 				}
 				%VertexHeightNoiseVertHeightCurve2
 				{
 					deformity = 8000
 					simplexHeightEnd = 9000
+					SigmaDimensions = 1
 				}
 				%AltitudeAlpha
 				{
 					atmosphereDepth = 8000
+					SigmaDimensions = 1
 				}
 				%LandControl
 				{
 					vHeightMax = 10000
+					SigmaDimensions = 1
 				}
 			}
 		}
