--- a/GameData/Sigma/Dimensions/Configs/Bodies/Vall.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Vall.cfg
@@ -22,32 +22,39 @@
 				@VertexSimplexHeightAbsolute,0
 				{
 					deformity = 3000
+					SigmaDimensions = 1
 				}
 				@VertexSimplexHeightAbsolute,1
 				{
 					deformity = 100
+					SigmaDimensions = 1
 				}
 				%VertexHeightNoise
 				{
 					deformity = 2000
+					SigmaDimensions = 1
 				}
 				VertexHeightMap {}
 				VertexHeightMap {}
 				@VertexHeightMap,0
 				{
 					deformity = 1000
+					SigmaDimensions = 1
 				}
 				@VertexHeightMap,1
 				{
 					deformity = 2000
+					SigmaDimensions = 1
 				}
 				%AltitudeAlpha
 				{
 					atmosphereDepth = 8000
+					SigmaDimensions = 1
 				}
 				%LandControl
 				{
 					vHeightMax = 10000
+					SigmaDimensions = 1
 				}
 			}
 		}
