Pol and final touches

--- a/GameData/Sigma/Dimensions/Configs/General/removePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/removePQSMods.cfg
@@ -19,6 +19,7 @@
 				!AltitudeAlpha:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 				!VertexSimplexHeight:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 				!VertexHeightNoiseVertHeight:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+				!VertexHeightOffset:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 			}
 		}
 	}
@@ -157,6 +158,16 @@
 			@Mods
 			{
 				!VertexHeightNoiseVertHeight:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+			}
+		}
+	}
+	@Body:HAS[#removePQSMods[*,VertexHeightOffset,*]]
+	{
+		@PQS
+		{
+			@Mods
+			{
+				!VertexHeightOffset:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 			}
 		}
 	}
