--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -66,6 +66,10 @@
 				{
 					@deformity *= #$@SigmaDimensions/Resize$
 				}
+				@VertexHeightOffset,*
+				{
+					@offset *= #$@SigmaDimensions/Resize$
+				}
 			}
 		}
 	}
