mun flatten area

--- a/GameData/Sigma/Dimensions/Configs/Bodies/Mun.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Mun.cfg
@@ -42,6 +42,20 @@
 					deformity = 400
 					SigmaDimensions = 1
 				}
+				FlattenArea {}
+				FlattenArea {}
+				@FlattenArea,0
+				{
+					flattenTo = 4500.25
+					innerRadius = 200
+					outerRadius = 1000
+				}
+				@FlattenArea,1
+				{
+					flattenTo = 4000.25
+					innerRadius = 200
+					outerRadius = 1000
+				}
 			}
 		}
 	}
