--- a/GameData/Sigma/Dimensions/Settings.cfg
+++ b/GameData/Sigma/Dimensions/Settings.cfg
@@ -4,3 +4,7 @@ SigmaDimensions
 	Rescale = 1
 	dayLengthMultiplier = 1
 }
+
+formula to fix Munolith 2
+
+(flattento * Resize) - ((189 - 13.69) * (1 - Resize))
