--- a/GameData/Sigma/Dimensions/Configs/Bodies/Mun.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Mun.cfg
@@ -56,6 +56,18 @@
 					innerRadius = 200
 					outerRadius = 1000
 				}
+				VoronoiCraters {}
+				VoronoiCraters {}
+				@VoronoiCraters,0
+				{
+					deformation = 500
+					jitterHeight = 3
+				}
+				@VoronoiCraters,1
+				{
+					deformation = 200
+					jitterHeight = 2
+				}
 			}
 		}
 	}
