--- a/GameData/Sigma/Dimensions/Configs/General/removePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/removePQSMods.cfg
@@ -20,6 +20,7 @@
 				!VertexSimplexHeight:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 				!VertexHeightNoiseVertHeight:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 				!VertexHeightOffset:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+				!VoronoiCraters:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 			}
 		}
 	}
@@ -168,6 +169,16 @@
 			@Mods
 			{
 				!VertexHeightOffset:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+			}
+		}
+	}
+	@Body:HAS[#removePQSMods[*,VoronoiCraters,*]]
+	{
+		@PQS
+		{
+			@Mods
+			{
+				!VoronoiCraters:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 			}
 		}
 	}
