--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -70,6 +70,11 @@
 				{
 					@offset *= #$@SigmaDimensions/Resize$
 				}
+				@VoronoiCraters,*
+				{
+					@deformation *= #$@SigmaDimensions/Resize$
+					@jitterHeight *= #$@SigmaDimensions/Resize$
+				}
 			}
 		}
 	}
