--- a/GameData/Sigma/Dimensions/Configs/Bodies/Eeloo.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Eeloo.cfg
@@ -48,6 +48,11 @@
 					deformity = 140
 					SigmaDimensions = 1
 				}
+				%VertexVoronoi
+				{
+					deformation = 250
+					displacement = 0.00499999988824129
+				}
 			}
 		}
 	}
