--- a/GameData/Sigma/Dimensions/Configs/General/removePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/removePQSMods.cfg
@@ -21,6 +21,7 @@
 				!VertexHeightNoiseVertHeight:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 				!VertexHeightOffset:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 				!VoronoiCraters:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+				!VertexVoronoi:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 			}
 		}
 	}
@@ -179,6 +180,16 @@
 			@Mods
 			{
 				!VoronoiCraters:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+			}
+		}
+	}
+	@Body:HAS[#removePQSMods[*,VertexVoronoi,*]]
+	{
+		@PQS
+		{
+			@Mods
+			{
+				!VertexVoronoi:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 			}
 		}
 	}
