--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -75,6 +75,11 @@
 					@deformation *= #$@SigmaDimensions/Resize$
 					@jitterHeight *= #$@SigmaDimensions/Resize$
 				}
+				@VertexVoronoi,*
+				{
+					@deformation *= #$@SigmaDimensions/Resize$
+					@displacement *= #$@SigmaDimensions/Resize$
+				}
 			}
 		}
 	}
