--- a/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
@@ -52,6 +52,24 @@
 					deformity = 5000
 					SigmaDimensions = 1
 				}
+				MapDecalTangent {}
+				MapDecalTangent {}
+				@MapDecalTangent,0
+				{
+					absoluteOffset = 0
+					heightMapDeformity = 70
+					radius = 7500
+					smoothHeight = 0
+					SigmaDimensions = 1
+				}
+				@MapDecalTangent,1
+				{
+					absoluteOffset = -85
+					heightMapDeformity = 200
+					radius = 1200
+					smoothHeight = 0.2
+					SigmaDimensions = 1
+				}
 			}
 		}
 	}
