--- a/GameData/Sigma/Dimensions/Configs/General/removePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/removePQSMods.cfg
@@ -22,6 +22,7 @@
 				!VertexHeightOffset:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 				!VoronoiCraters:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 				!VertexVoronoi:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+				!MapDecalTangent:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 			}
 		}
 	}
@@ -190,6 +191,16 @@
 			@Mods
 			{
 				!VertexVoronoi:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+			}
+		}
+	}
+	@Body:HAS[#removePQSMods[*,MapDecalTangent,*]]
+	{
+		@PQS
+		{
+			@Mods
+			{
+				!MapDecalTangent:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 			}
 		}
 	}
