--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -80,6 +80,13 @@
 					@deformation *= #$@SigmaDimensions/Resize$
 					@displacement *= #$@SigmaDimensions/Resize$
 				}
+				@MapDecalTangent,*
+				{
+					@absoluteOffset *= #$@SigmaDimensions/Resize$
+					@heightMapDeformity *= #$@SigmaDimensions/Resize$
+					@radius *= #$@SigmaDimensions/Resize$
+					@smoothHeight *= #$@SigmaDimensions/Resize$
+				}
 			}
 		}
 	}
