--- a/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
@@ -70,6 +70,13 @@
 					smoothHeight = 0.2
 					SigmaDimensions = 1
 				}
+				%MapDecal
+				{
+					absoluteOffset = 400
+					heightMapDeformity = 100
+					radius = 2000
+					smoothHeight = 0.1
+				}
 			}
 		}
 	}
