--- a/GameData/Sigma/Dimensions/Configs/General/removePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/removePQSMods.cfg
@@ -23,6 +23,7 @@
 				!VoronoiCraters:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 				!VertexVoronoi:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 				!MapDecalTangent:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+				!MapDecal:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 			}
 		}
 	}
@@ -201,6 +202,16 @@
 			@Mods
 			{
 				!MapDecalTangent:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+			}
+		}
+	}
+	@Body:HAS[#removePQSMods[*,MapDecal,*]]
+	{
+		@PQS
+		{
+			@Mods
+			{
+				!MapDecal:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 			}
 		}
 	}
