--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -87,6 +87,13 @@
 					@radius *= #$@SigmaDimensions/Resize$
 					@smoothHeight *= #$@SigmaDimensions/Resize$
 				}
+				@MapDecal,*
+				{
+					@absoluteOffset *= #$@SigmaDimensions/Resize$
+					@heightMapDeformity *= #$@SigmaDimensions/Resize$
+					@radius *= #$@SigmaDimensions/Resize$
+					@smoothHeight *= #$@SigmaDimensions/Resize$
+				}
 			}
 		}
 	}
