--- a/GameData/Sigma/Dimensions/Configs/Bodies/Duna.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Duna.cfg
@@ -63,6 +63,12 @@
 					atmosphereDepth = 150000
 					SigmaDimensions = 1
 				}
+				%MapDecal
+				{
+					absoluteOffset = 0
+					heightMapDeformity = 100
+					radius = 400
+				}
 			}
 		}
 	}
