--- a/GameData/Sigma/Dimensions/Configs/Bodies/Bop.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Bop.cfg
@@ -53,6 +53,20 @@
 					vHeightMax = 10000
 					SigmaDimensions = 1
 				}
+				MapDecal {}
+				MapDecal {}
+				@MapDecal,0
+				{
+					heightMapDeformity = 10
+					radius = 60000
+					SigmaDimensions = 1
+				}
+				@MapDecal,1
+				{
+					heightMapDeformity = 10
+					radius = 20000
+					SigmaDimensions = 1
+				}
 			}
 		}
 	}
